# Haskell_Assignmnet2

./: CovidDataAnalyse.cabal  LICENSE  Questions.md  REPORT.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs
