cabal-version:      3.0
name:               CovidDataAnalyse
version:            0.1.0.0
license-file:       LICENSE
author:             Asilbek
category:           Data
build-type:         Simple


extra-doc-files:    REPORT.md,
                    Questions.md

common warnings
    ghc-options: -Wall

executable CovidDataAnalyse

    import:           warnings
    main-is:          Main.hs

    build-depends:    base ^>=4.15.1.0,  
                      cassava,
                      bytestring,
                      vector

    hs-source-dirs:   src
    default-language: Haskell2010
